--- a/English/后端专业名词.md
+++ b/English/后端专业名词.md
@@ -19,13 +19,24 @@
 | 排列             | Permutation                       | algorithm   | */*ˌpɜːrmjuˈteɪʃ(ə)n*/* |
 | 括号             | parentheses                       | algorithm   | /pəˈrenθəsiːz/          |
 | 轮询             | poll                              |             |                         |
-| 分代             | generations                       |             |                         |
-| 老年代           | *tenured generation*              |             |                         |
-| 垃圾回收         | Garbage collection                |             |                         |
-| 年轻代           | *young generation*                |             |                         |
-| eden区           | eden space                        |             |                         |
-| survivor 区      | survivor space                    |             |                         |
-| 垃圾回收停顿时间 | **Garbage Collection Pause Time** |             |                         |
-| GC时间比例       | GCTimeRatio                       |             |                         |
+| 分代             | generations                       | JVM         |                         |
+| 老年代           | *tenured generation*              | JVM         |                         |
+| 垃圾回收         | Garbage collection                | JVM         |                         |
+| 年轻代           | *young generation*                | JVM         |                         |
+| eden区           | eden space                        | JVM         |                         |
+| survivor 区      | survivor space                    | JVM         |                         |
+| 垃圾回收停顿时间 | **Garbage Collection Pause Time** | JVM         |                         |
+| GC时间比例       | GCTimeRatio                       | JVM         |                         |
 | 命令行           | command-line                      |             |                         |
+| 事务             | Transactions                      | Mysql       |                         |
+| 一致性           | Consistency                       |             |                         |
+| 隔离级别         | Isolation level                   | Mysql       |                         |
+| 脏读             | dirty-read                        | Mysql       |                         |
+| 不可重复读       | Non-repeatable-read               | Mysql       |                         |
+| 幻读             | phantom-read                      | Mysql       |                         |
+| 主键索引         | primary-index                     |             |                         |
+| 唯一索引         | unique-index                      |             |                         |
+| 普通索引         | Secondary-index                   |             |                         |
+| 联合索引         | Composite-index                   |             | */*kəmˈpɑːzət*/*        |
+| 连续             |                                   |             |                         |
 
