美团开放平台技术

--- a/English/后端专业名词.md
+++ b/English/后端专业名词.md
@@ -38,5 +38,5 @@
 | 唯一索引         | unique-index                      |             |                         |
 | 普通索引         | Secondary-index                   |             |                         |
 | 联合索引         | Composite-index                   |             | */*kəmˈpɑːzət*/*        |
-| 连续             |                                   |             |                         |
+| 连续             | consecutive                       |             |                         |
 
