二叉树右视图 分而治之

--- a/English/后端专业名词.md
+++ b/English/后端专业名词.md
@@ -39,4 +39,8 @@
 | 普通索引         | Secondary-index                   |             |                         |
 | 联合索引         | Composite-index                   |             | */*kəmˈpɑːzət*/*        |
 | 连续             | consecutive                       |             |                         |
+| 相邻             | adjacent                          |             |                         |
+| 回文结构         | palindromic                       |             |                         |
+| 重复             | duplicates                        |             |                         |
+| 填充             | populate                          |             |                         |
 
